# cpp_project_matrix_calculator

./: .gitignore  CMakeLists.txt
src/: main.cpp
